immich/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
  namespace: immich
spec:
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
